--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vscode/
+src/logs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -125,3 +126,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/settings.json
