--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .vscode/
-src/logs
+logs/
 jup.sh
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -127,5 +128,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/settings.json
 .vscode/settings.json
 .vscode/settings.json
